Added clickable wood image links to my LinkedIn, GitHub, and Resume, as well as added parallax on them

--- a/gallery.html
+++ b/gallery.html
@@ -88,7 +88,7 @@
                     <img src="./Resources/Images/Wood/wood12.png" alt="Bowser" id="wood12" class="wood-img" onload="setGalleryParallax(this)">
                     <p class="image-caption">Bowser</p>
                 </div>
-                <div class="gallery-img" data-speed="0.3">
+                <div class="gallery-img" data-speed="0.27">
                     <img src="./Resources/Images/Wood/wood13.png" alt="Wily&apos;s Castle (MM2)" id="wood13" class="wood-img" onload="setGalleryParallax(this)">
                     <p class="image-caption">Wily's Castle (MM2)</p>
                 </div>
@@ -97,9 +97,13 @@
                     <p class="image-caption">Cowboy Life Advice</p>
                 </div>
                 <br>
-                <div class="gallery-img" data-speed="0.14">
+                <div class="gallery-img" data-speed="0.1">
                     <img src="./Resources/Images/Wood/wood15.png" alt="Stocking Nameplate" id="wood15" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">"Ursula" Stocking Nameplate</p>
+                    <p class="image-caption">"Ursula" Nameplate</p>
+                </div>
+                <div class="gallery-img" data-speed="0.15">
+                    <img src="./Resources/Images/Wood/wood16.png" alt="Falcon Kick" id="wood16" class="wood-img" onload="setGalleryParallax(this)">
+                    <p class="image-caption">Falcon Kick</p>
                 </div>
             </div>
             <!-- END GALLERY -->
