--- a/gama.html
+++ b/gama.html
@@ -37,7 +37,15 @@
                         <p>Hello and welcome to my website! I'm a 2nd year Computer Science student at York University, here to continue learning, growing, and bettering myself.</p>
                         <p>I'm very passionate about many things, such as programming, music, and playing games. In the near future, I hope to combine this grab-bag mix of talents into something meaningful!</p>
                         <p>If you're here with the interest of hiring me and reviewing my background, here are some relevant links:</p>
-                        <a href="https://www.linkedin.com/in/leo10gama/" target="blank">LinkedIn </a><a href="https://github.com/Leo10Gama" target="blank">GitHub </a><a href="./Resources/GamaLeonardo_Resume.pdf" target="blank">Resume</a>
+                        <a href="https://www.linkedin.com/in/leo10gama/" target="blank" class="wood-link">
+                            <img src="./Resources/Images/Wood/linkedin.png" alt="LinkedIn" class="wood-link" data-speed="-0.07">
+                        </a>
+                        <a href="https://github.com/Leo10Gama" target="blank" class="wood-link">
+                            <img src="./Resources/Images/Wood/github.png" alt="GitHub" class="wood-link" data-speed="-0.12">
+                        </a>
+                        <a href="./Resources/GamaLeonardo_Resume.pdf" target="blank" class="wood-link">
+                            <img src="./Resources/Images/Wood/resume.png" alt="Resume" class="wood-link" data-speed="-0.1">
+                        </a>
                     </section>
                 </div>
             </div>
