--- a/gallery.html
+++ b/gallery.html
@@ -31,79 +31,198 @@
             <div class="border overlap-text-right col">
                 <h2>Wood Projects</h2>
                 <section class="section">
-                    <p>Below is a small gallery of some of my best/favourite pyrography pieces. Feel free to browse at your own leisure!</p>
+                    <p>Below is a small gallery of some of my best/favourite pyrography pieces. Feel free to browse at your own leisure! As well, click on any image to see it at full size.</p>
                 </section>
             </div>
             <div class="gallery-container">
                 <div class="gallery-img" data-speed="0.1">
-                    <img src="./Resources/Images/Wood/wood00.png" alt="Shovel Knight" id="wood00" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Shovel Knight</p>
+                    <a href="./Resources/Images/Wood/wood00.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood00.png" alt="Shovel Knight" id="wood00" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Shovel Knight</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2020
+                        <br>
+                        <b>Dimensions: </b>4" x 4"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.3">
-                    <img src="./Resources/Images/Wood/wood01.png" alt="Plague Knight" id="wood01" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Plague Knight</p>
+                    <a href="./Resources/Images/Wood/wood01.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood01.png" alt="Plague Knight" id="wood01" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Plague Knight</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2020
+                        <br>
+                        <b>Dimensions: </b>4" x 4"
+                    </p>
                 </div>
                 <br>
                 <div class="gallery-img" data-speed="0.2">
-                    <img src="./Resources/Images/Wood/wood02.png" alt="Metroid" id="wood02" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Metroid</p>
+                    <a href="./Resources/Images/Wood/wood02.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood02.png" alt="Metroid" id="wood02" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Metroid</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2020
+                        <br>
+                        <b>Dimensions: </b>4" x 4"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="-0.1">
-                    <img src="./Resources/Images/Wood/wood03.png" alt="Samus Aran" id="wood03" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Samus Aran</p>
+                    <a href="./Resources/Images/Wood/wood03.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood03.png" alt="Samus Aran" id="wood03" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Samus Aran</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2020
+                        <br>
+                        <b>Dimensions: </b>4" x 4"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.1">
-                    <img src="./Resources/Images/Wood/wood04.png" alt="&quot;Sorichetti&quot; House Sign" id="wood04" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">"Sorichetti" House Sign</p>
+                    <a href="./Resources/Images/Wood/wood04.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood04.png" alt="&quot;Sorichetti&quot; House Sign" id="wood04" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">"Sorichetti" House Sign</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2021
+                        <br>
+                        <b>Dimensions: </b>39.5" x 12"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="-0.05">
-                    <img src="./Resources/Images/Wood/wood05.png" alt="Dracula&apos;s Castle" id="wood05" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Dracula's Castle</p>
+                    <a href="./Resources/Images/Wood/wood05.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood05.png" alt="Dracula&apos;s Castle" id="wood05" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Dracula's Castle</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2019
+                        <br>
+                        <b>Dimensions: </b>4" x 4"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.3">
-                    <img src="./Resources/Images/Wood/wood06.png" alt="The Champions&apos; Ballad" id="wood06" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">The Champion's Ballad</p>
+                    <a href="./Resources/Images/Wood/wood06.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood06.png" alt="The Champions&apos; Ballad" id="wood06" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">The Champion's Ballad</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2017
+                        <br>
+                        <b>Dimensions: </b>9" x 9"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.1">
-                    <img src="./Resources/Images/Wood/wood07.png" alt="Master Cycle Zero" id="wood07" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Master Cycle Zero</p>
+                    <a href="./Resources/Images/Wood/wood07.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood07.png" alt="Master Cycle Zero" id="wood07" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Master Cycle Zero</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2020
+                        <br>
+                        <b>Dimensions: </b>9" x 9"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.33">
-                    <img src="./Resources/Images/Wood/wood08.png" alt="Bayonetta Gets Wicked!" id="wood08" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Bayonetta Gets Wicked!</p>
+                    <a href="./Resources/Images/Wood/wood08.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood08.png" alt="Bayonetta Gets Wicked!" id="wood08" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Bayonetta Gets Wicked!</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2020
+                        <br>
+                        <b>Dimensions: </b>7" x 10"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.15">
-                    <img src="./Resources/Images/Wood/wood09.png" alt="Bulbasaur" id="wood09" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Bulbasaur</p>
+                    <a href="./Resources/Images/Wood/wood09.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood09.png" alt="Bulbasaur" id="wood09" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Bulbasaur</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2020
+                        <br>
+                        <b>Dimensions: </b>4" x 4"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.3">
-                    <img src="./Resources/Images/Wood/wood10.png" alt="Super Smash Bros. Ultimate" id="wood10" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Super Smash Bros. Ultimate</p>
+                    <a href="./Resources/Images/Wood/wood10.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood10.png" alt="Super Smash Bros. Ultimate" id="wood10" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Super Smash Bros. Ultimate</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2019
+                        <br>
+                        <b>Dimensions: </b>54" x 10"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.08">
-                    <img src="./Resources/Images/Wood/wood11.png" alt="Gate of Time" id="wood11" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Gate of Time</p>
+                    <a href="./Resources/Images/Wood/wood11.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood11.png" alt="Gate of Time" id="wood11" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Gate of Time</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2017
+                        <br>
+                        <b>Dimensions: </b>8" x 8"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.26">
-                    <img src="./Resources/Images/Wood/wood12.png" alt="Bowser" id="wood12" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Bowser</p>
+                    <a href="./Resources/Images/Wood/wood12.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood12.png" alt="Bowser" id="wood12" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Bowser</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2015
+                        <br>
+                        <b>Dimensions: </b>7" x 5.5"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.27">
-                    <img src="./Resources/Images/Wood/wood13.png" alt="Wily&apos;s Castle (MM2)" id="wood13" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Wily's Castle (MM2)</p>
+                    <a href="./Resources/Images/Wood/wood13.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood13.png" alt="Wily&apos;s Castle (MM2)" id="wood13" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Wily's Castle (MM2)</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2014
+                        <br>
+                        <b>Dimensions: </b>4" x 3"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.04">
-                    <img src="./Resources/Images/Wood/wood14.png" alt="Cowboy Life Advice" id="wood14" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Cowboy Life Advice</p>
+                    <a href="./Resources/Images/Wood/wood14.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood14.png" alt="Cowboy Life Advice" id="wood14" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Cowboy Life Advice</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2018
+                        <br>
+                        <b>Dimensions: </b>8" x 8"
+                    </p>
                 </div>
                 <br>
                 <div class="gallery-img" data-speed="0.1">
-                    <img src="./Resources/Images/Wood/wood15.png" alt="Stocking Nameplate" id="wood15" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">"Ursula" Nameplate</p>
+                    <a href="./Resources/Images/Wood/wood15.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood15.png" alt="Stocking Nameplate" id="wood15" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">"Ursula" Nameplate</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2020
+                        <br>
+                        <b>Dimensions: </b>6" x 4"
+                    </p>
                 </div>
                 <div class="gallery-img" data-speed="0.15">
-                    <img src="./Resources/Images/Wood/wood16.png" alt="Falcon Kick" id="wood16" class="wood-img" onload="setGalleryParallax(this)">
-                    <p class="image-caption">Falcon Kick</p>
+                    <a href="./Resources/Images/Wood/wood16.png" target="blank" class="wood-img">
+                        <img src="./Resources/Images/Wood/wood16.png" alt="Falcon Kick" id="wood16" class="wood-img" onload="setGalleryParallax(this)">
+                    </a>
+                    <p class="image-title">Falcon Kick</p>
+                    <p class="image-caption">
+                        <b>Year: </b>2021
+                        <br>
+                        <b>Dimensions: </b>6" x 3.5"
+                    </p>
                 </div>
             </div>
             <!-- END GALLERY -->
