THE MENU RESIZING WORKS

--- a/commissions.html
+++ b/commissions.html
@@ -12,11 +12,14 @@
 </head>
 <body>
     <!-- NAV BAR -->
-    <nav id="navBar" class="navbar navbar-expand-lg navbar-light sticky-top row">
-        <div id="topNav" class="col collapse navbar-collapse">
+    <nav id="navBar" class="navbar navbar-expand-lg navbar-light row" style="">
+        <div id="topNav" class="col navbar-collapse">
             <a class="nav-link" href="gama.html">Leonardo Gama</a>
+            <div id="navBurger" class="col navbar-collapse">
+                <input type="image" src="./Resources/Images/hamburg.png" onclick="burger()"/>
+            </div>
         </div>
-        <div id="bottomNav" class="col collapse navbar-collapse">
+        <div id="bottomNav" class="col navbar-collapse">
             <a class="nav-link" href="gama.html#about">About</a>
             <a class="nav-link" href="gama.html#codeProjects">Code Projects</a>
             <a class="nav-link" href="commissions.html#commissions">Wood Commissions</a>
@@ -46,22 +49,22 @@
                             I will request a downpayment (typically 25% of the cost) before I begin your commission.
                         </p></li>
                         <li><p>
-                            Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) may be subject to additional fees. This may include
-                            the request of a design being burnt into a tree slice.
+                            Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) may be subject to additional fees.
                         </p></li>
                         <li><p>
                             When completed, I will send you an image of the finished project and request the remaining payment. Once it is paid, I will send the commission by mail to you. If your location happens to be
                             nearby enough to me, I may also offer pickup/delivery to reduce delivery time, though this would be at your own discretion.
                         </p></li>
                         <li><p>
-                            Unless requested otherwise, all projects are burned on poplar wood and sealed with varnish. Other woods or finishes (e.g. an design on oak wood sealed with epoxy) may also be subject to additional fees.
+                            Unless requested otherwise, all commissions will be burned on my choice of wood (typically either poplar or some other soft, light wood, or whichever will look best for your request!) and 
+                            sealed with varnish. Other types of wood and seals are available upon request, but may be subject to additional fees depending on the type of wood/sealant.
                         </p></li>
                         <li><p>
                             I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory in nature.
                         </p></li>
                     </ul>
                     <p>
-                        To request a commission, please send me an email at <b>**EMAIL ADDRESS**</b> with a description of what you would like, alongside an image of the design (if applicable). 
+                        To request a commission, please send me an email at <b>leo10gama@gmail.com</b> with a description of what you would like, alongside an image of the design (if applicable). 
                         From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take between 1-2 weeks at the latest to be
                         completed, burned, and sealed. 
                     </p>
