--- a/gama.html
+++ b/gama.html
@@ -12,11 +12,14 @@
 </head>
 <body>
     <!-- NAV BAR -->
-    <nav id="navBar" class="navbar navbar-expand-lg navbar-light sticky-top row">
-        <div id="topNav" class="col collapse navbar-collapse">
+    <nav id="navBar" class="navbar navbar-expand-lg navbar-light row" style="">
+        <div id="topNav" class="col navbar-collapse">
             <a class="nav-link" href="gama.html">Leonardo Gama</a>
+            <div id="navBurger" class="col navbar-collapse">
+                <input type="image" src="./Resources/Images/hamburg.png" onclick="burger()"/>
+            </div>
         </div>
-        <div id="bottomNav" class="col collapse navbar-collapse">
+        <div id="bottomNav" class="col navbar-collapse">
             <a class="nav-link" href="gama.html#about">About</a>
             <a class="nav-link" href="gama.html#codeProjects">Code Projects</a>
             <a class="nav-link" href="commissions.html#commissions">Wood Commissions</a>
