A few more minor tweaks before launch

--- a/commissions.html
+++ b/commissions.html
@@ -35,9 +35,10 @@
             </div>
             <div class="border overlap-text-right col">
                 <h2>Pyrography Commissions</h2>
-                <p class="subtitle">Currently <b>OPEN</b></p>
+                <br>
+                <p id="commission-subtitle" class="subtitle">Currently OPEN!</p>
                 <section class="section">
-                    <p>You may also be on my site because you are interested in commissioning me to burn something for you! If that's the case, here are some of my general guidelines and approximate rates:</p>
+                    <p>If you're interested in commissioning me to burn you something in wood (like <a href="gallery.html">one of these</a>), then here are some of my general guidelines and rates:</p>
                     <ul class="scrollable-section">
                         <li><p>
                             I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
@@ -57,7 +58,7 @@
                         </p></li>
                         <li><p>
                             Unless requested otherwise, all commissions will be burned on my choice of wood (typically either poplar or some other soft, light wood, or whichever will look best for your request!) and 
-                            sealed with varnish. Other types of wood and seals are available upon request, but may be subject to additional fees depending on the type of wood/sealant.
+                            sealed with varnish. Other types of wood and seals are available upon request, but may be subject to additional fees.
                         </p></li>
                         <li><p>
                             I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory in nature.
