--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,13 @@
             <div class="border overlap-text-right col">
                 <h2>Wood Projects</h2>
                 <section class="section">
-                    <p>Below is a small gallery of some of my best/favourite pyrography pieces. Feel free to browse at your own leisure! As well, click on any image to see it at full size.</p>
+                    <p>
+                        Below is a small gallery of some of my best/favourite pyrography pieces. Feel free to browse at your own leisure! You can click on any piece to open an enlarged version in a 
+                        new tab if you wish.
+                    </p>
+                    <p>
+                        If you are interested in commissioning me to make you a piece like one of these, check out my rates <a href="commissions.html">here</a>!
+                    </p>
                 </section>
             </div>
             <div class="gallery-container">
