Final touches before launch

--- a/gallery.html
+++ b/gallery.html
@@ -179,24 +179,24 @@
                 </div>
                 <div class="gallery-img" data-speed="0.26">
                     <a href="./Resources/Images/Wood/wood12.png" target="blank" class="wood-img">
-                        <img src="./Resources/Images/Wood/wood12.png" alt="Bowser" id="wood12" class="wood-img" onload="setGalleryParallax(this)">
+                        <img src="./Resources/Images/Wood/wood12.png" alt="&quot;Gama&quot; Charcuterie Board" id="wood12" class="wood-img" onload="setGalleryParallax(this)">
                     </a>
-                    <p class="image-title">Bowser</p>
+                    <p class="image-title">"Gama" Charcuterie Board</p>
                     <p class="image-caption">
-                        <b>Year: </b>2015
+                        <b>Year: </b>2021
                         <br>
-                        <b>Dimensions: </b>7" x 5.5"
+                        <b>Dimensions: </b>13" x 26"
                     </p>
                 </div>
                 <div class="gallery-img" data-speed="0.27">
                     <a href="./Resources/Images/Wood/wood13.png" target="blank" class="wood-img">
-                        <img src="./Resources/Images/Wood/wood13.png" alt="Wily&apos;s Castle (MM2)" id="wood13" class="wood-img" onload="setGalleryParallax(this)">
+                        <img src="./Resources/Images/Wood/wood13.png" alt="Canadian Quarter (2021)" id="wood13" class="wood-img" onload="setGalleryParallax(this)">
                     </a>
-                    <p class="image-title">Wily's Castle (MM2)</p>
+                    <p class="image-title">Canadian Quarter (2021)</p>
                     <p class="image-caption">
-                        <b>Year: </b>2014
+                        <b>Year: </b>2021
                         <br>
-                        <b>Dimensions: </b>4" x 3"
+                        <b>Dimensions: </b>4" x 4"
                     </p>
                 </div>
                 <div class="gallery-img" data-speed="0.04">
