--- a/gama.html
+++ b/gama.html
@@ -76,8 +76,17 @@
                             <p>
                                 Each bot does its own thing, but their primary purpose is to show pictures of cats. Images are shown either at random, or a random image of a specific cat can be seen if that cat's name
                                 is entered following the command. In addition, the L30-Pi model is capable of interacting with websites like <a href="https://en.numista.com/" target="blank">Numista</a>, 
-                                <a href="https://www.ninsheetmusic.org/" target="blank">NinSheetMusic</a>, and <a href="https://downloads.khinsider.com/" target="blank">KHInsider</a> to get more information oncoins, 
+                                <a href="https://www.ninsheetmusic.org/" target="blank">NinSheetMusic</a>, and <a href="https://downloads.khinsider.com/" target="blank">KHInsider</a> to get more information on coins, 
                                 sheet music, or video game soundtracks respectively.
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Nonogram Solver</h3>
+                            <p>
+                                Nonograms, also known as Picross puzzles, are logic puzzles in which one has to create an image out of squares on a grid. These images are created by referring to "hint numbers", which indicate 
+                                how many filled squares appear consecutively along the grid. The challenging part of this is that it is not specified how many squares appear in between these clusters. The algorithm I employed 
+                                to solve these problems (found <a href="https://github.com/Leo10Gama/Nonogram-Solver" target="blank">here</a>) makes use of the limited possibilities for each row and column, narrowing each down 
+                                to a few possible permutations on each pass of the grid.
                             </p>
                         </li>
                     </ul>
