--- a/commissions.html
+++ b/commissions.html
@@ -38,36 +38,45 @@
                 <br>
                 <p id="commission-subtitle" class="subtitle">Currently OPEN!</p>
                 <section class="section">
-                    <p>If you're interested in commissioning me to burn you something in wood (like <a href="gallery.html">one of these</a>), then here are some of my general guidelines and rates:</p>
+                    <p>If you're interested in commissioning me to burn you something in wood (like <a href="gallery.html">one of these</a>), here's some relevant information:</p>
+                    <p><b>Fees and Prices:</b></p>
                     <ul class="scrollable-section">
                         <li><p>
-                            I charge an initial $15 to cover the cost of materials. This may scale depending on the requested size of the commission.
+                            Initially, I charge at least a $15 fee for the cost of materials. This includes the wood itself and cost of the sealant. Since each project is unique to the buyer, larger pieces of wood, as well as 
+                            the request of more exotic sealants may be subject to a slightly higher material fee.
                         </p></li>
                         <li><p>
-                            On top of the flat rate, I charge an additional $15 per hour spent burning. This simply means more intricate and detailed designs will cost more than simpler ones.
+                            On top of material costs, I charge a labour fee that is generally dependant on the complexity of the requested design, since that is what most impacts how long a design takes to complete. 
+                            Generally, this is close to around $10-$15 per hour spent burning. For something simple (i.e. plain filled text), the labour costs may generally be less than something more complex 
+                            (i.e. a portrait or animal). But again, each piece is unique to the buyer, and thus it is hard to give an absolute number for every possible request.
                         </p></li>
                         <li><p>
-                            I will request a downpayment (typically 25% of the cost) before I begin your commission.
+                            Additional features such as frames and additional designs along the sides or back are subject to additional fees.
                         </p></li>
                         <li><p>
-                            Additional features such as frames, additional designs on the sides, and different shapes (e.g. hearts or circles instead of rectangles or squares) may be subject to additional fees.
+                            I'm happy to provide you with a quote for your request. Please contact me at my email address at the bottom of this block.
+                        </p></li>
+                    </ul>
+                    <p><b>Guidelines:</b></p>
+                    <ul class="scrollable-section">
+                        <li><p>
+                            I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory in nature.
+                        </p></li>
+                        <li><p>
+                            Upon making and agreeing on a commission request, I will ask for a downpayment (typically 25% of the cost) before I begin your commission.
                         </p></li>
                         <li><p>
                             When completed, I will send you an image of the finished project and request the remaining payment. Once it is paid, I will send the commission by mail to you. If your location happens to be
-                            nearby enough to me, I may also offer pickup/delivery to reduce delivery time, though this would be at your own discretion.
+                            nearby enough to me, I may also offer pickup/delivery to reduce delivery time, though this would be at your discretion.
                         </p></li>
                         <li><p>
                             Unless requested otherwise, all commissions will be burned on my choice of wood (typically either poplar or some other soft, light wood, or whichever will look best for your request!) and 
                             sealed with varnish. Other types of wood and seals are available upon request, but may be subject to additional fees.
                         </p></li>
-                        <li><p>
-                            I will not burn designs that are NSFW, nor will I burn anything controversial, political, or discriminatory in nature.
-                        </p></li>
                     </ul>
                     <p>
                         To request a commission, please send me an email at <b>leo10gama@gmail.com</b> with a description of what you would like, alongside an image of the design (if applicable). 
-                        From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take between 1-2 weeks at the latest to be
-                        completed, burned, and sealed. 
+                        From there, we can negotiate deadlines and I can provide you with a quote. Please be aware that I am only one person, so designs may take some time to be completed, burned, and sealed. 
                     </p>
                 </section>
             </div>
