fixed commission rates

--- a/commissions.html
+++ b/commissions.html
@@ -42,19 +42,14 @@
                     <p><b>Fees and Prices:</b></p>
                     <ul class="scrollable-section">
                         <li><p>
-                            Initially, I charge at least a $15 fee for the cost of materials. This includes the wood itself and cost of the sealant. Since each project is unique to the buyer, larger pieces of wood, as well as 
-                            the request of more exotic sealants may be subject to a slightly higher material fee.
+                            Since all projects are unique, costs will vary quite significantly. For reference, a 4" wood slice coaster may be between $40-$60, a 12"x26" charcuterie board may be around $75-$125, and 
+                            a 6"x6" wood tablet may be between $50-$100. Higher prices will generally be associated with more complex and intricate designs.
                         </p></li>
                         <li><p>
-                            On top of material costs, I charge a labour fee that is generally dependant on the complexity of the requested design, since that is what most impacts how long a design takes to complete. 
-                            Generally, this is close to around $10-$15 per hour spent burning. For something simple (i.e. plain filled text), the labour costs may generally be less than something more complex 
-                            (i.e. a portrait or animal). But again, each piece is unique to the buyer, and thus it is hard to give an absolute number for every possible request.
+                            Additional features on your commission, such as frames or designs along the sides or back are subject to additional fees.
                         </p></li>
                         <li><p>
-                            Additional features such as frames and additional designs along the sides or back are subject to additional fees.
-                        </p></li>
-                        <li><p>
-                            I'm happy to provide you with a quote for your request. Please contact me at my email address at the bottom of this block.
+                            For a more accurate idea of what your specific request may cost, I'm more than happy to provide you with a quote. Please contact me at my email address at the bottom of this block.
                         </p></li>
                     </ul>
                     <p><b>Guidelines:</b></p>
